[package]
name = "flow-top-talker-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
flow-top-talker-common = { path = "../flow-top-talker-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "flow-top-talker"
path = "src/main.rs"
